# email-triage-openenv-git-init

./: Dockerfile  README.md  baseline.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
