[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world RL environment for training AI agents to triage and prioritize emails"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "google-genai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"
start = "uvicorn server:app --host 0.0.0.0 --port 7860"

[project.urls]
Homepage = "https://huggingface.co/spaces/haricharan28/email-triage-openenv"
Repository = "https://github.com/haricharanreddy28/email-triage-openenv-git-init"

[tool.openenv]
name = "email-triage-openenv"
version = "1.0.0"
entrypoint = "server:app"
